--- a/Settings.json
+++ b/Settings.json
@@ -4,7 +4,7 @@
 	"productid"										: "prod-fn",
 	"sandboxid"										: "fn",
 	"deploymentid"									: "62a9473a2dca46b29ccf17577fcf42d7",
-	"requested_splash"								: "EasyAntiCheat/NoverseStart.png",
+	"requested_splash"								: "EasyAntiCheat/DEBLOATED.png",
 	"wait_for_game_process_exit"					: "true",
 	"hide_bootstrapper"								: "false",
 	"hide_gui"										: "false",
